# mcp-agent-worker

./: README.md  mcp-agent-worker.env.example  pyproject.toml
.github/workflows/: ci.yml
assets/: mcp-servers.json
docs/: execute_plan.md  http_message.md  tools_availability.md
src/: __init__.py  agent.py  envs.py  main.py  server.py
