[project]
name = "mcp-agent-worker"
version = "0.1.0"
description = "LangChain-based agent exposed via FastMCP with dynamic MCP endpoint registry"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { file = "LICENSE" }
dependencies = [
  "fastmcp>=0.4.0",
  "langchain>=0.2.12",
  "langchain-openai>=0.1.22",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "langchain-mcp-adapters>=0.1.9",
  "langgraph>=0.6.4",
]

[project.scripts]
mcp-agent-worker = "mcp_agent_worker.mcp_server:run"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_agent_worker"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  ".eggs",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.6",
]
